# server-manager

./: .gitignore  Cargo.toml  README.md  example-servers.toml
src/: commands.rs  config.rs  main.rs  ssh.rs
