[package]
name = "server-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server-manager"
path = "src/main.rs"

[dependencies]
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
eframe = "0.29"
egui = "0.29"
